src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Global Styles */
html {
  @apply transition-colors duration-300;
  font-family: "Quicksand", sans-serif;
  scroll-behavior: smooth;
}

body {
  overflow-x: hidden;
}

body::-webkit-scrollbar {
  width: 0.75rem;
}
body::-webkit-scrollbar-track {
  background: #031f24;
}
body::-webkit-scrollbar-thumb {
  background: #5a9b9d;
}

.scroll-down {
  width: 100%;
  position: absolute;
  bottom: 80px;
  text-align: center;
  letter-spacing: 2px;
  transition: all 0.3s;
  font-size: 1.25rem;
  font-family: "Poppins", sans-serif;
  text-transform: uppercase;
}

.scroll-down a {
  padding: 20px;
  padding-bottom: 60px;
  opacity: 1;
}

.scroll-down a:hover {
  opacity: 0.7;
}

.scroll-down span {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 24px;
  height: 24px;
  margin-left: -12px;
  border-left: 1px solid #fff;
  border-bottom: 1px solid #fff;
  animation: scrollDown 1.5s infinite;
}

@keyframes scrollDown {
  0% {
    transform: translateY(6px) rotate(-45deg);
  }
  50% {
    transform: translateY(15px) rotate(-45deg);
  }
  100% {
    transform: translateY(6px) rotate(-45deg);
  }
}

canvas {
  pointer-events: none !important;
}

.left {
  position: fixed;
  width: 40px;
  left: 40px;
  bottom: 0px;
  z-index: 1000;
  margin-bottom: 0px !important;
}

.left::after {
  content: "";
  display: block;
  width: 1px;
  height: 100px;
  background-color: white;
  margin: 0px auto;
}

/* Ocean floor animation */
.ocean-floor > use {
  animation: move-forever 70s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
}
.ocean-floor > use:nth-child(1) {
  animation-delay: -10s;
  animation-duration: 70s;
}
.ocean-floor > use:nth-child(2) {
  animation-delay: -20s;
  animation-duration: 100s;
}
.ocean-floor > use:nth-child(3) {
  animation-delay: -30s;
  animation-duration: 130s;
}
.ocean-floor > use:nth-child(4) {
  animation-delay: -40s;
  animation-duration: 200s;
}
@keyframes move-forever {
  0% {
    transform: translate3d(-90px, 0, 0);
  }
  100% {
    transform: translate3d(85px, 0, 0);
  }
}

